<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialComponents.DayNight">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin"
        android:fontFamily="@font/poppins_bold"
        android:lineSpacingMultiplier="0.65"
        android:text="@string/welcoming_text"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/lines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/curvy_lines"
        android:src="@drawable/curvy_lines"
        app:layout_constraintBottom_toTopOf="@id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageModel"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/male_model"
        android:scaleType="centerCrop"
        android:src="@drawable/male_model"
        app:layout_constraintBottom_toTopOf="@id/startButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startButton"
        style="@style/MainButtonStyle"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/get_started"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>